
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2009 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                                  -- NEWS --


ngIRCd Release 15 (2009-11-07)

  ngIRCd 15~rc1 (2009-10-15)
  - Do not add default listening port (6667) if SSL ports were specified, so
    ngIRCd can be configured to only accept SSL-encrypted connections now.
  - Enable IRC operators to use the IRC command SQUIT (insted of the already
    implemented but non-standard DISCONNECT command).
  - New configuration option "AllowRemoteOper" (disabled by default) that
    enables remote IRC operators to use the IRC commands SQUIT and CONNECT
    on the local server.
  - Enforce upper limit on maximum number of handled commands. This implements
    a throttling scheme: an IRC client can send up to 3 commands or 256 bytes
    per second before a one second pause is enforced.

ngIRCd Release 14.1 (2009-05-05)

  - Security: fix remotely triggerable crash in SSL/TLS code.
  - Debian: build ngircd-full-dbg package.
  - Allow ping timeout quit messages to show the timeout value.

ngIRCd Release 14 (2009-04-20)

  ngIRCd 14~rc1 (2009-03-29)
  - Allow creation of persistent modeless channels.
  - The INFO command reports the compile time now (if available).
  - Support individual channel keys for pre-defined channels: introduce
    new configuration variable "KeyFile" in [Channel] sections in ngircd.conf,
    here a file can be configured for each pre-defined channel which contains
    individual channel keys for different users.
  - Remove limit on maximum number of predefined channels in ngircd.conf.

ngIRCd Release 13 (2008-12-25)

  ngIRCd 13~rc1 (2008-11-21):
  - New version number scheme :-)
  - Initial support for IRC services, using a RFC1459 style interface,